@@ -1,3 +1,7 @@
+2014-12-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* share/gphotoframe.appdata.xml.in: Added AppData (issue 113).
+
 2014-11-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 2.0.1 release.
